created initiative sites map

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
           {% include "home/page-title.html" %}
           {% include "home/our-mission.html" %}
           {% include "home/announcements-events.html" %}
+          {% include "home/initiative-sites.html" %}
+          {% include "home/program-eligibility.html" %}
+          {% include "home/program-requirements.html" %}
+          {% include "home/program-benefits.html" %}
+          {% include "home/publications.html" %}
+          {% include "home/multimedia.html" %}
+          {% include "home/our-team.html" %}
         </main>
 
         {% include "footer.html" %}
