created publications section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <script src="assets/uswds/js/uswds.min.js"></script>
     <script src="assets/js/vendors/lazy/jquery.lazy.min.js"></script>
+    <script src="assets/js/vendors/owl-carousel/owl.carousel.min.js"></script> 
     <script src="assets/js/vendors/parallax-scroll/jquery.parallax-scroll.js"></script>
     <script src="assets/js/functions.js"></script>
 
