--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <!-- SITE WRAPPER - END -->
 
     <script src="assets/uswds/js/uswds.min.js"></script>
+    <script src="assets/js/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/vendors/lazy/jquery.lazy.min.js"></script>
     <script src="assets/js/vendors/owl-carousel/owl.carousel.min.js"></script> 
     <script src="assets/js/vendors/parallax-scroll/jquery.parallax-scroll.js"></script>
